--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
         <link href="style.css" rel="stylesheet">
        
     </head>
-    
 
 
 
@@ -18,8 +17,14 @@
     </style>
 
 <audio controls autoplay>
-    <source src="static/song.mp3" type="audio/x-mp3">
+    <source src="static/ever_young.mp3" type="audio/x-mp3">
   </audio>
+
+
+<audio controls>
+    <source src="static/alice.mp3" type="audio/x-mp3">
+  </audio>
+
 
 <center>
     <span class="heading">
@@ -27,7 +32,7 @@
     <img src="static/down_dirty.webp" width="750" alt="Papa!">
 
 
-    <img src="static/art.webp" width="750" alt="Papa!">
+    <img src="static/revan_ethan2.webp" width="750" alt="Papa!">
 
 
     </span>
